Updating upstream projects versions to ones that support GraalVM8

--- a/compiler-common/pom.xml
+++ b/compiler-common/pom.xml
@@ -21,12 +21,12 @@
         <dependency>
             <groupId>com.dukescript.libraries</groupId>
             <artifactId>net.java.html.lib</artifactId>
-            <version>0.5</version>
+            <version>${typings.version}</version>
         </dependency>
         <dependency>
             <groupId>com.dukescript.libraries</groupId>
             <artifactId>net.java.html.lib.dom</artifactId>
-            <version>0.5</version>
+            <version>${typings.version}</version>
         </dependency>
     </dependencies>
 </project>
